[tool.poetry]
name = "webscraping"
version = "0.1.0"
description = "webscraping project for Making with Code"
authors = ["Jacob Wolf <jacob.h.wolf@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.1"
beautifulsoup4 = "^4.11.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
